[package]
name = "render-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
csscolorparser = {version = "0.6.2", features = ["serde"]}
markdown = "1.0.0-alpha.14"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
serde_yaml = "0.9.25"
anyhow = "1.0.75"